--- a/Learn1/myapp/templates/admin_dashboard.html
+++ b/Learn1/myapp/templates/admin_dashboard.html
@@ -5,6 +5,11 @@
 </head>
 <body>
     <h2>Welcome, Admin</h2>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
     <a href="{% url 'logout' %}">Logout</a>
 </body>
 </html>
