--- a/Learn1/myapp/templates/change_password.html
+++ b/Learn1/myapp/templates/change_password.html
@@ -1,8 +1,11 @@
+{% load widget_tweaks %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Change Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'login/loginstylesheet.css' %}">
 </head>
 <body class="bg-dark text-white">
     <div class="container mt-5">
