--- a/Learn1/myapp/templates/admin_create_user.html
+++ b/Learn1/myapp/templates/admin_create_user.html
@@ -26,7 +26,7 @@
             <button type="submit" class="btn btn-primary w-100">Give Credentials</button>
         </form>
         <div class="text-center mt-3">
-            <a href="{% url 'login' %}">Back to Login</a>
+            <a href="{% url 'admin_dashboard' %}">Back to Admin Dashboard</a>
         </div>
     </div>
 </body>
