--- a/Learn1/myapp/templates/electricity_demand_monthly.html
+++ b/Learn1/myapp/templates/electricity_demand_monthly.html
@@ -19,7 +19,7 @@
             <nav class="navbar">
                 <ul class="nav">
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="about.html" target="_blank">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="{% url 'about' %}">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'electricity_demand_plot' %}">Hourly Analysis</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'electricity_demand_plot_daily' %}">Daily Analysis</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="{% url 'electricity_demand_plot_monthly' %}">Monthly Analysis</a></li>
