--- a/Learn1/myapp/templates/entrepreneur_dashboard.html
+++ b/Learn1/myapp/templates/entrepreneur_dashboard.html
@@ -23,7 +23,7 @@
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'electricity_demand_plot' %}">Analysis</a></li>
-                    <li><a href="{% url 'residential_clusters' %}">Geographical Map</a></li>
+                    <li><a href="{% url 'residential_clusters' %}">GeoMap</a></li>
                     <li><a href="{% url 'chatbot_query' %}">SmartFAQs</a></li>
                     <li><a href="{% url 'update_credentials' %}">Update Credentials</a></li>
                     
